Added contracts in bank provider and impl in accounting

--- a/accounting/src/main/resources/application.yml
+++ b/accounting/src/main/resources/application.yml
@@ -20,3 +20,5 @@ spring:
                 username: rabbitmq
                 password: rabbitmq
                 virtual-host: /
+
+bank.provider.url: http://localhost:8082
