--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@ gradle-app.setting
 **/build/
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,kotlin,intellij,java,git,gradle
+
+target/
