--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 name: Build
 on:
   push:
-    branches:
-      - master # or the name of your main branch
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
