Reverting bank-provider changes

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <modules>
         <module>accounting</module>
+        <module>bank-provider</module>
         <module>transaction</module>
     </modules>
 
