--- a/accounting/src/main/resources/application.yml
+++ b/accounting/src/main/resources/application.yml
@@ -21,4 +21,8 @@ spring:
                 password: rabbitmq
                 virtual-host: /
 
+logging:
+  level:
+    org.springframework.test.context.cache: DEBUG
+
 bank.provider.url: http://localhost:8082
